# -model-training-room

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  auto_setup.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
backend/: data_generator.py  dataset_manager.py  env_config.py  experiment_store.py  export.py  hardware_checker.py  model_cards.py  model_hub.py  model_recommender.py  training_engine.py  training_monitor.py
docs/: DEMO.md  GPU_SETUP.md  TRAINING_REPORT.md  TUTORIAL.md
frontend/: app.py
tests/: fix_py314_pickle.py  gen_big_dataset.py  gen_demo_data.py  release_test.py  step1_download_model.py  step2_generate_data.py  step3_train.py  step4_export.py  test_all_features.py  test_e2e.py
tools/: benchmark_models.py  compare_models.py  quantize_gguf.py
