[project]
name = "model-training-room"
version = "0.3.0"
description = "本地化大模型微调一站式工具 — 下载·准备数据·微调·导出"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ZBcxy", email = "954510662@qq.com" }]
keywords = [
    "llm", "fine-tuning", "lora", "qlora", "machine-learning",
    "deep-learning", "nlp", "chinese", "model-training",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.41.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
    "peft>=0.10.0",
    "gradio>=4.0",
    "huggingface_hub>=0.23.0",
    "modelscope>=1.14.0",
    "pandas>=2.0",
    "scikit-learn>=1.4.0",
    "llama-cpp-python>=0.2.75",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ZBcxy/-model-training-room"
Repository = "https://github.com/ZBcxy/-model-training-room.git"
Issues = "https://github.com/ZBcxy/-model-training-room/issues"

[project.scripts]
mtr = "frontend.app:create_app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]
